# reboxed_plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat
src/: main.cpp  main.hpp  plugin.cpp  sdk_externs.hpp  utils.cpp  utils.hpp  vpk.cpp  vpk.hpp
